# shurahub

./: .firebaserc  Dockerfile  README.md  debate_log.jsonl  leads.csv  main.py  requirements.txt  shurahub.db
.idx/: dev.nix
backend/: .env.exemple  Dockerfile  pyproject.toml
backend/app/: auth.py  database.py  main.py
backend/app/api/: websocket.py
backend/app/api/routers/: auth.py  debates.py  engagement.py  pages.py
backend/app/core/: config.py
backend/app/models/: __init__.py  debate_models.py
backend/app/services/: ai_service.py  debate_service.py
backend/app/static/css/: auth.css  citations.css  globals.css  landing.css  review.css  styles.css
backend/app/static/js/: auth.js  citations.js  landing.js  main.js  review.js  script.js  theme.js
backend/app/templates/: analytics.html  index.html  landing.html  login.html  register.html  review.html
docs/: citations-implementation-guide.md  citations-summary.md  mobile-implementation-summary.md  mobile-testing-checklist.md  mobile-ux-optimization.md  source-highlighting-analysis.md  weight-meter-implementation.md
osp_mvp/: README.md  requirements.txt
osp_mvp/client/: client_search.py
osp_mvp/experiments/: generalization_test.py  validate_projector.py
osp_mvp/host/: host_generator.py  train_projector.py
osp_mvp/shared_data/: dns_registry.json  host_vectors.json  projector_matrix.npy  projector_metadata.json
static/css/: auth.css  globals.css  landing.css  review.css  styles.css
static/js/: landing.js  lead.js  (+2 more)
templates/: index.html  landing.html  login.html  register.html  review.html
(+7 files in other folders)
